--- a/html/home.html
+++ b/html/home.html
@@ -9,7 +9,7 @@
     <!-- font awesome cdn link -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"/>
     <!-- swiper cdn link -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css"/>
+    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css"/>
 </head>
 <body>
     <!--Header Section-->
@@ -20,17 +20,17 @@
             </div>
         </nav>
         
-        <img class="logo" src='../images/logo.png' alt="Logo"></img>
+        <img class="logo" src='../image/logo.png' alt="Logo"></img>
 
         <div class="search-product">
-            <input for="btn-search" type="text" placeholder="Search for Products">
+            <input for="btn-search" type="text" placeholder="Search">
             <button id="btn-search" type="button"><i class="fa-solid fa-magnifying-glass"></i></button>
         </div>
 
         <nav class="icon-header">
             <a href="./wishlist.html"><i class="fa-regular fa-heart"></i></a>
             <a href="../html/order.html"><i class="fa-solid fa-cart-shopping"></i></a>
-            <a href="#"><i class="fa-regular fa-user"></i></a>
+            <a href="./profile.html"><i class="fa-regular fa-user"></i></a>
         </nav>
     </header>
 
@@ -43,7 +43,7 @@
             <li><a href="#">CATEGORIES</a></li><br>
             <li><a href="#">PAYMENT METHOD</a></li><br>
             <li><a href="../html/order.html">ORDER TRACKING 🛒</a></li><br>
-            <li><a href="#">ACCOUNT</a></li><br>
+            <li><a href="./profile.html">ACCOUNT</a></li><br>
             <li><a href="#">CONTACT US</a></li><br>
             <li><a href="#">FAQ</a></li>
         </ul>
@@ -53,7 +53,7 @@
     <section class="promo" id="promo">
         <div class="swiper promo-slider">
             <div class="swiper-wrapper wrapper">
-                <div class="swiper-slide slide">
+                <div class="swiper-slide slide" id="slide">
                     <div class="content">
                         <span>New Trending</span>
                         <h3>Kids Fashion</h3>
@@ -65,7 +65,7 @@
                     </div>
                 </div>
 
-                <div class="swiper-slide slide">
+                <div class="swiper-slide slide" id="slide">
                     <div class="content">
                         <span>New Trending</span>
                         <h3>Men Fashion</h3>
@@ -77,7 +77,7 @@
                     </div>
                 </div>
 
-                <div class="swiper-slide slide">
+                <div class="swiper-slide slide" id="slide">
                     <div class="content">
                         <span>New Trending</span>
                         <h3>Women Fashion</h3>
@@ -116,8 +116,8 @@
                 </div>
                 <span class="initial-price"> Rp198.000 </span>
                 <span class="price"> Rp149.900 </span>
-                <a href="#" class="btn">Add to Cart</a>
-                <a href="#" id="wishlist-icon" class="fa-regular fa-heart"></a>
+                <a href="./confirm-order.html" class="btn">Add to Cart</a>
+                <a href="./wishlist.html" id="wishlist-icon" class="fa-regular fa-heart"></a>
             </div>
 
             <div class="box">
@@ -133,8 +133,8 @@
                 </div>
                 <span class="initial-price"> Rp198.000 </span>
                 <span class="price"> Rp149.900 </span>
-                <a href="#" class="btn">Add to Cart</a>
-                <a href="#" id="wishlist-icon" class="fa-regular fa-heart"></a>
+                <a href="./confirm-order.html" class="btn">Add to Cart</a>
+                <a href="./wishlist.html" id="wishlist-icon" class="fa-regular fa-heart"></a>
             </div>
 
             <div class="box">
@@ -150,8 +150,8 @@
                 </div>
                 <span class="initial-price"> Rp198.000 </span>
                 <span class="price"> Rp149.900 </span>
-                <a href="#" class="btn">Add to Cart</a>
-                <a href="#" id="wishlist-icon" class="fa-regular fa-heart"></a>
+                <a href="./confirm-order.html" class="btn">Add to Cart</a>
+                <a href="./wishlist.html" id="wishlist-icon" class="fa-regular fa-heart"></a>
             </div>
 
             <div class="box">
@@ -167,8 +167,8 @@
                 </div>
                 <span class="initial-price"> Rp198.000 </span>
                 <span class="price"> Rp149.900 </span>
-                <a href="#" class="btn">Add to Cart</a>
-                <a href="#" id="wishlist-icon" class="fa-regular fa-heart"></a>
+                <a href="./confirm-order.html" class="btn">Add to Cart</a>
+                <a href="./wishlist.html" id="wishlist-icon" class="fa-regular fa-heart"></a>
             </div>
         </div>
     </section>
@@ -222,8 +222,8 @@
                 </div>
                 <span class="initial-price"> Rp198.000 </span>
                 <span class="price"> Rp149.900 </span>
-                <a href="#" class="btn">Add to Cart</a>
-                <a href="#" id="wishlist-icon" class="fa-regular fa-heart"></a>
+                <a href="./confirm-order.html" class="btn">Add to Cart</a>
+                <a href="./wishlist.html" id="wishlist-icon" class="fa-regular fa-heart"></a>
             </div>
 
             <div class="box">
@@ -239,8 +239,8 @@
                 </div>
                 <span class="initial-price"> Rp198.000 </span>
                 <span class="price"> Rp149.900 </span>
-                <a href="#" class="btn">Add to Cart</a>
-                <a href="#" id="wishlist-icon" class="fa-regular fa-heart"></a>
+                <a href="./confirm-order.html" class="btn">Add to Cart</a>
+                <a href="./wishlist.html" id="wishlist-icon" class="fa-regular fa-heart"></a>
             </div>
 
             <div class="box">
@@ -256,8 +256,8 @@
                 </div>
                 <span class="initial-price"> Rp198.000 </span>
                 <span class="price"> Rp149.900 </span>
-                <a href="#" class="btn">Add to Cart</a>
-                <a href="#" id="wishlist-icon" class="fa-regular fa-heart"></a>
+                <a href="./confirm-order.html" class="btn">Add to Cart</a>
+                <a href="./wishlist.html" id="wishlist-icon" class="fa-regular fa-heart"></a>
             </div>
 
             <div class="box">
@@ -273,8 +273,8 @@
                 </div>
                 <span class="initial-price"> Rp198.000 </span>
                 <span class="price"> Rp149.900 </span>
-                <a href="#" class="btn">Add to Cart</a>
-                <a href="#" id="wishlist-icon" class="fa-regular fa-heart"></a>
+                <a href="./confirm-order.html" class="btn">Add to Cart</a>
+                <a href="./wishlist.html" id="wishlist-icon" class="fa-regular fa-heart"></a>
             </div>
         </div>
     </section>
@@ -328,6 +328,6 @@
     <!--Custom JavaScript file link-->
     <script src="../../front-end-capstone-project-section-jayapura-group-6\js\script.js"></script>
     <!-- Swiper js link -->
-    <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
+    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
 </body>
 </html>
