--- a/html/home.html
+++ b/html/home.html
@@ -103,73 +103,7 @@
         </div>
         <br>
         <div class="box-container">
-            <div class="box">
-                <img class="image-product" src="../image/clothes.png" alt="product"><br>
-                <p class="category-name"> Clothes </p>
-                <h5 class="product-name"> Name Product</h5>
-                <div class="stars">
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star-half-stroke"></i>
-                </div>
-                <span class="initial-price"> Rp198.000 </span>
-                <span class="price"> Rp149.900 </span>
-                <a href="./confirm-order.html" class="btn">Add to Cart</a>
-                <a href="./wishlist.html" id="wishlist-icon" class="fa-regular fa-heart"></a>
-            </div>
-
-            <div class="box">
-                <img class="image-product" src="../image/bag.png" alt="product"><br>
-                <p class="category-name"> Bag </p>
-                <h5 class="product-name"> Name Product</h5>
-                <div class="stars">
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star-half-stroke"></i>
-                </div>
-                <span class="initial-price"> Rp198.000 </span>
-                <span class="price"> Rp149.900 </span>
-                <a href="./confirm-order.html" class="btn">Add to Cart</a>
-                <a href="./wishlist.html" id="wishlist-icon" class="fa-regular fa-heart"></a>
-            </div>
-
-            <div class="box">
-                <img class="image-product" src="../image/belt.png" alt="product"><br>
-                <p class="category-name"> Belt </p>
-                <h5 class="product-name"> Name Product</h5>
-                <div class="stars">
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star-half-stroke"></i>
-                </div>
-                <span class="initial-price"> Rp198.000 </span>
-                <span class="price"> Rp149.900 </span>
-                <a href="./confirm-order.html" class="btn">Add to Cart</a>
-                <a href="./wishlist.html" id="wishlist-icon" class="fa-regular fa-heart"></a>
-            </div>
-
-            <div class="box">
-                <img class="image-product" src="../image/hat.png" alt="product"><br>
-                <p class="category-name"> Hat </p>
-                <h5 class="product-name"> Name Product</h5>
-                <div class="stars">
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star-half-stroke"></i>
-                </div>
-                <span class="initial-price"> Rp198.000 </span>
-                <span class="price"> Rp149.900 </span>
-                <a href="./confirm-order.html" class="btn">Add to Cart</a>
-                <a href="./wishlist.html" id="wishlist-icon" class="fa-regular fa-heart"></a>
-            </div>
+            <!-- Adding element in Javascript -->
         </div>
     </section>
       
@@ -208,76 +142,11 @@
             <hr>
         </div>
         <br>
-        <div class="box-container">
-            <div class="box">
-                <img class="image-product" src="../image/clothes.png" alt="product"><br>
-                <p class="category-name"> Clothes </p>
-                <h5 class="product-name"> Name Product</h5>
-                <div class="stars">
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star-half-stroke"></i>
-                </div>
-                <span class="initial-price"> Rp198.000 </span>
-                <span class="price"> Rp149.900 </span>
-                <a href="./confirm-order.html" class="btn">Add to Cart</a>
-                <a href="./wishlist.html" id="wishlist-icon" class="fa-regular fa-heart"></a>
-            </div>
-
-            <div class="box">
-                <img class="image-product" src="../image/bag.png" alt="product"><br>
-                <p class="category-name"> Bag </p>
-                <h5 class="product-name"> Name Product</h5>
-                <div class="stars">
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star-half-stroke"></i>
-                </div>
-                <span class="initial-price"> Rp198.000 </span>
-                <span class="price"> Rp149.900 </span>
-                <a href="./confirm-order.html" class="btn">Add to Cart</a>
-                <a href="./wishlist.html" id="wishlist-icon" class="fa-regular fa-heart"></a>
-            </div>
-
-            <div class="box">
-                <img class="image-product" src="../image/belt.png" alt="product"><br>
-                <p class="category-name"> Belt </p>
-                <h5 class="product-name"> Name Product</h5>
-                <div class="stars">
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star-half-stroke"></i>
-                </div>
-                <span class="initial-price"> Rp198.000 </span>
-                <span class="price"> Rp149.900 </span>
-                <a href="./confirm-order.html" class="btn">Add to Cart</a>
-                <a href="./wishlist.html" id="wishlist-icon" class="fa-regular fa-heart"></a>
-            </div>
-
-            <div class="box">
-                <img class="image-product" src="../image/hat.png" alt="product"><br>
-                <p class="category-name"> Hat </p>
-                <h5 class="product-name"> Name Product</h5>
-                <div class="stars">
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star-half-stroke"></i>
-                </div>
-                <span class="initial-price"> Rp198.000 </span>
-                <span class="price"> Rp149.900 </span>
-                <a href="./confirm-order.html" class="btn">Add to Cart</a>
-                <a href="./wishlist.html" id="wishlist-icon" class="fa-regular fa-heart"></a>
-            </div>
+        <div class="arrival-box-container">
+            <!-- Adding element in Javascript -->
         </div>
     </section>
+    <br><br>
 
     <!-- Scrool Top Button -->
     <a class="go-to-up" href="#"><i class="fa-solid fa-arrow-up"></i></a>
