--- a/html/wishlist.html
+++ b/html/wishlist.html
@@ -51,9 +51,9 @@
     <!-- Wishlist Page -->
     <section class="wishlist-page">
         <h2>My Wishlist</h2>
-        <div class="box-container">
+        <div class="wishlist-box-container">
             <div class="box">
-                <img class="image-product" src="../image/clothes.png" alt="product"><br>
+                <img class="image-product" src="../image/clothes3.png" alt="product"><br>
                 <p class="category-name"> Clothes </p>
                 <h5 class="product-name"> Name Product</h5>
                 <div class="stars">
@@ -61,7 +61,7 @@
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star-half-stroke"></i>
+                    <i class="fa-regular fa-star"></i>
                 </div>
                 <span class="initial-price"> Rp198.000 </span>
                 <span class="price"> Rp149.900 </span>
@@ -87,8 +87,8 @@
             </div>
 
             <div class="box">
-                <img class="image-product" src="../image/belt.png" alt="product"><br>
-                <p class="category-name"> Belt </p>
+                <img class="image-product" src="../image/skirt.png" alt="product"><br>
+                <p class="category-name"> Skirt </p>
                 <h5 class="product-name"> Name Product</h5>
                 <div class="stars">
                     <i class="fa-solid fa-star"></i>
@@ -104,8 +104,8 @@
             </div>
 
             <div class="box">
-                <img class="image-product" src="../image/hat.png" alt="product"><br>
-                <p class="category-name"> Hat </p>
+                <img class="image-product" src="../image/pants2.png" alt="product"><br>
+                <p class="category-name"> Pants </p>
                 <h5 class="product-name"> Name Product</h5>
                 <div class="stars">
                     <i class="fa-solid fa-star"></i>
