--- a/html/profile-before.html
+++ b/html/profile-before.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hello, Let's Sign In</title>
-    <link rel="stylesheet" href="../style/profile-before.css">
+    <link rel="stylesheet" href="../style/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"/>
 </head>
 <body>
@@ -61,7 +61,7 @@
             </ul>
         </div>
 
-        <div class="greet">
+        <div class="greet-BSI">
             <article> 
                 <h2>Hello, <a href="./signIn.html">Sign In</a></h2>
             </article>
