--- a/html/signIn.html
+++ b/html/signIn.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Log In</title>
-    <link rel="stylesheet" href="../style/signIn.css" />
+    <link rel="stylesheet" href="../style/style.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"/>
 </head>
-<body>
+<body class="body-SISU">
     <!--Content-->
     <div class="form-login">
         <form action="submit">
             <div class="container">
                 <h2>Sign In</h2>
-                <div class="form-group">
+                <div class="form-groupSI">
                     <input type="text" name="Username" placeholder="Username">
                     <input type="password" name="Password" placeholder="Password">
                 </div>
@@ -29,7 +29,7 @@
                     <strong>LOG IN</strong>
                 </button>
                 
-                <div class="account"><p>Don't Have an Account? <a href="../html/signUp.html"><strong> Sign Up</strong></a></p>
+                <div class="accountSI"><p>Don't Have an Account? <a href="../html/signUp.html"><strong> Sign Up</strong></a></p>
                 </div>
             </div>
         </form>
