--- a/html/signUp.html
+++ b/html/signUp.html
@@ -4,23 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign Up</title>
-    <link rel="stylesheet" href="../style/signUp.css" />
+    <link rel="stylesheet" href="../style/style.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"/>
 </head>
-<body>
+<body class="body-SISU">
     <!--Content-->
     <div class="form-signup">
         <form action="submit">
             <div class="container">
                 <h2>Sign Up</h2>
-                <div class="form-group">
+                <div class="form-groupSU">
                     <input type="email" name="email" placeholder="Email">
                     <input type="password" name="Password" placeholder="Password">
                 </div>
 
                 <button href="#" class="Signup"><strong>SIGN UP</strong></button>
 
-                <div class="account">
+                <div class="accountSU">
                     <p>Already a Member? <a href="../html/signIn.html"><strong>Log In</strong></a></p>
                     <button class="btn-Signup"><i class="fa-brands fa-facebook" style="color: #3b5998;"></i>Facebook</button>
                     <button class="btn-Signup"><i class="fa-brands fa-google" style="color: #3b5998;"></i>Google</button>
