--- a/html/profile.html
+++ b/html/profile.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Profile</title>
-    <link rel="stylesheet" href="../style/profile.css">
+    <link rel="stylesheet" href="../style/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"/>
 </head>
 <body>
@@ -61,7 +61,7 @@
             </ul>
         </div>
 
-        <div class="greet">
+        <div class="greet-AFSI">
         <div class="form-afsi">
             <form action="submit">
                 <h2>Hello, <a href="#">Display Name</a></h2>
