--- a/html/signUp.html
+++ b/html/signUp.html
@@ -15,6 +15,8 @@
                 <h2>Sign Up</h2>
                 <div class="form-groupSU">
                     <input type="email" name="email" placeholder="Email">
+                    <input type="text" name="Username" placeholder="Username">
+                    <input type="tel" name="contact" placeholder="Contact">
                     <input type="password" name="Password" placeholder="Password">
                 </div>
 
@@ -22,8 +24,8 @@
 
                 <div class="accountSU">
                     <p>Already a Member? <a href="../html/signIn.html"><strong>Log In</strong></a></p>
-                    <button class="btn-Signup"><i class="fa-brands fa-facebook" style="color: #3b5998;"></i>Facebook</button>
-                    <button class="btn-Signup"><i class="fa-brands fa-google" style="color: #3b5998;"></i>Google</button>
+                    <!-- <button class="btn-Signup"><i class="fa-brands fa-facebook" style="color: #3b5998;"></i>Facebook</button>
+                    <button class="btn-Signup"><i class="fa-brands fa-google" style="color: #3b5998;"></i>Google</button> -->
                 </div>
 
                 <div class="term">
