--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <nav class="icon-header">
             <a href="https://wa.me/628551235178" target="_blank"><i class="fa-solid fa-phone"></i></a>
             <a href="./html/order.html"><i class="fa-solid fa-cart-shopping"></i></a>
-            <a href="./html/profile.html"><i class="fa-regular fa-user"></i></a>
+            <a href="./html/signIn.html"><i class="fa-regular fa-user"></i></a>
         </nav>
     </header>
 
@@ -156,7 +156,7 @@
                 <br><br>
             </form>
         </div>
-        <a href="./html/order.html"><button id="order-btn" type="submit" class="btn">Order</button></a>
+        <a href="#"><button id="order-btn" type="submit" class="btn">Order</button></a>
     </section>
 
     <br><br>
